--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "kelvinmo/simplejwt",
+    "name": "josecely/simplejwt",
     "description": "An simple JSON Web Token library for PHP.",
     "keywords": [ "jwt", "jwe", "jose" ],
-    "homepage": "https://github.com/kelvinmo/simplejwt",
+    "homepage": "https://github.com/josecely/simplejwt",
     "require": {
         "php": ">=5.4.0",
         "ext-openssl": "*",
@@ -18,8 +18,8 @@
     "license": "BSD-3-Clause",
     "authors": [
         {
-            "name": "Kelvin Mo",
-            "email": "kmo@users.sourceforge.net"
+            "name": "Jose Cely",
+            "email": "jose.cely@tecsua.com"
         }
     ],
     "bin": [ "bin/jwkstool.phar" ],
